--- a/src/app/creditcards/add/add.component.html
+++ b/src/app/creditcards/add/add.component.html
@@ -45,17 +45,15 @@
           <label>Interest Rate</label>
           <input matInput placeholder="Enter Interest Rate" name="interestRate" [(ngModel)]="newCreditCard.interestRate" required minlength="1" maxlength="20">
           <mat-error *ngIf="creditCardForm.controls['interestRate']?.touched && creditCardForm.controls['interestRate']?.hasError('required')">Interest Rate is required</mat-error>
-          <mat-error *ngIf="creditCardForm.controls['interestRate']?.touched && creditCardForm.controls['interestRate']?.hasError('minlength')">Interest Rate must have atleast 3 characters</mat-error>
+          <mat-error *ngIf="creditCardForm.controls['interestRate']?.touched && creditCardForm.controls['interestRate']?.hasError('minlength')">Interest Rate must have atleast 1 characters</mat-error>
           <mat-error *ngIf="creditCardForm.controls['interestRate']?.touched && creditCardForm.controls['interestRate']?.hasError('maxlength')">Interest Rate cannot be more than 20 characters</mat-error>
         </mat-form-field>
-      </div>
 
-      <div class="form-group">
         <mat-form-field class="half-width">
           <label>Annual Fee</label>
           <input matInput placeholder="Enter Annual Fee" name="annualFee" [(ngModel)]="newCreditCard.annualFee" required minlength="1" maxlength="20">
           <mat-error *ngIf="creditCardForm.controls['annualFee']?.touched && creditCardForm.controls['annualFee']?.hasError('required')">Annual Fee is required</mat-error>
-          <mat-error *ngIf="creditCardForm.controls['annualFee']?.touched && creditCardForm.controls['annualFee']?.hasError('minlength')">Annual Fee must have atleast 3 characters</mat-error>
+          <mat-error *ngIf="creditCardForm.controls['annualFee']?.touched && creditCardForm.controls['annualFee']?.hasError('minlength')">Annual Fee must have atleast 1 characters</mat-error>
           <mat-error *ngIf="creditCardForm.controls['annualFee']?.touched && creditCardForm.controls['annualFee']?.hasError('maxlength')">Annual Fee cannot be more than 20 characters</mat-error>
         </mat-form-field>
       </div>
@@ -76,16 +74,23 @@
           </mat-select>
         </mat-form-field>
       </div>
-      <!-->
-        <div class="form-group">
-          <mat-form-field class="half-width">
-            <input matInput required [matDatepicker]="createdDatePicker" name="createdDate" [(ngModel)]="newCreditCard.createdDate" minlength="3" placeholder="Select Date">
-            <mat-datepicker-toggle matSuffix [for]="createdDatePicker"></mat-datepicker-toggle>
-            <mat-datepicker #createdDatePicker></mat-datepicker>
-            <mat-error *ngIf="creditCardForm.controls['createdDate']?.touched && creditCardForm.controls['createdDate']?.invalid">Select created date</mat-error>
-          </mat-form-field>
-        </div>
-  -->
+
+      <div class="form-group">
+        <mat-form-field class="half-width">
+          <input matInput required [matDatepicker]="createdDatePicker" name="createdDate" [(ngModel)]="newCreditCard.createdDate" minlength="3" placeholder="Select Date">
+          <mat-datepicker-toggle matSuffix [for]="createdDatePicker"></mat-datepicker-toggle>
+          <mat-datepicker #createdDatePicker></mat-datepicker>
+          <mat-error *ngIf="creditCardForm.controls['createdDate']?.touched && creditCardForm.controls['createdDate']?.invalid">Select created date</mat-error>
+        </mat-form-field>
+
+        <mat-form-field class="half-width">
+          <input matInput required [matDatepicker]="updatedDatePicker" name="updatedDate" [(ngModel)]="newCreditCard.updatedDate" minlength="3" placeholder="Select Date">
+          <mat-datepicker-toggle matSuffix [for]="updatedDatePicker"></mat-datepicker-toggle>
+          <mat-datepicker #updatedDatePicker></mat-datepicker>
+          <mat-error *ngIf="creditCardForm.controls['updatedDate']?.touched && creditCardForm.controls['updatedDate']?.invalid">Select Updated Date</mat-error>
+        </mat-form-field>
+      </div>
+
       <div class="form-group">
         <button mat-raised-button color="primary" [disabled]="!creditCardForm.valid">Add New Credit Card</button>
       </div>
